# jemallocator

.github/workflows/: main.yml
ci/: dox.sh
jemalloc-ctl/: Cargo.toml  README.md
jemalloc-ctl/src/: arenas.rs  config.rs  error.rs  keys.rs  lib.rs  opt.rs  profiling.rs  raw.rs  stats.rs  stats_print.rs  thread.rs
jemalloc-sys/: Cargo.toml  README.md  build.rs
jemalloc-sys/tests/: malloc_conf_empty.rs  malloc_conf_set.rs  unprefixed_malloc.rs
jemallocator/: Cargo.toml  README.md
jemallocator-global/: Cargo.toml  README.md
jemallocator-global/src/: lib.rs
jemallocator/benches/: roundtrip.rs
jemallocator/src/: lib.rs
jemallocator/tests/: background_thread_defaults.rs  background_thread_enabled.rs  ffi.rs  grow_in_place.rs  malloctl.rs  shrink_in_place.rs  smoke.rs  smoke_ffi.rs  usable_size.rs
test-dylib/: Cargo.toml
test-dylib/src/: main.rs
