[package]
name = "linera-jemalloc-ctl"
version = "0.6.1"
authors = [
    "Steven Fackler <sfackler@gmail.com>",
    "Gonzalo Brito Gadeschi <gonzalobg88@gmail.com>",
    "The TiKV Project Developers",
]
license = "MIT/Apache-2.0"
readme = "README.md"
categories = ["memory-management", "api-bindings", "development-tools" ]
keywords = ["allocator", "jemalloc"]
repository = "https://github.com/linera-io/jemallocator"
homepage = "https://github.com/linera-io/jemallocator"
documentation = "https://docs.rs/linera-jemalloc-ctl"
description = """
A safe wrapper over jemalloc's control and introspection APIs
"""
edition = "2018"

[badges]
travis-ci = { repository = "linera-io/jemallocator" }
codecov = { repository = "linera-io/jemallocator" }
is-it-maintained-issue-resolution = { repository = "linera-io/jemallocator" }
is-it-maintained-open-issues = { repository = "linera-io/jemallocator" }
maintenance = { status = "actively-developed" }

[dependencies]
linera-jemalloc-sys = { path = "../jemalloc-sys", version = "0.6.1" }
libc = { version = "0.2", default-features = false }
paste = "1"

[dev-dependencies]
linera-jemallocator = { path = "../jemallocator", version = "0.6.1" }

[features]
default = []
stats = ["linera-jemalloc-sys/stats"]
profiling = ["linera-jemalloc-sys/profiling"]
use_std = [ "libc/use_std" ]
disable_initial_exec_tls = ["linera-jemalloc-sys/disable_initial_exec_tls"]

[package.metadata.docs.rs]
rustdoc-args = [ "--cfg", "jemallocator_docs" ]
features = ["stats", "profiling", "use_std"]
